fix error in staetup.cs file and update readme.

--- a/PawandeepBookStore.csproj
+++ b/PawandeepBookStore.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PawandeepBookStore.DataAccess\PawandeepBooks.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
