modify SD class properties and add reference to main project

--- a/PawandeepBookStore.csproj
+++ b/PawandeepBookStore.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PawandeepBookStore.DataAccess\PawandeepBooks.DataAccess.csproj" />
     <ProjectReference Include="..\PawansBooks.Models\PawandeepBooks.Models.csproj" />
+    <ProjectReference Include="..\PawansBooks.Utility\PawandeepBooks.Utility.csproj" />
   </ItemGroup>
 
 </Project>
