--- a/PawandeepBookStore.csproj
+++ b/PawandeepBookStore.csproj
@@ -14,12 +14,20 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PawandeepBookStore.DataAccess\PawandeepBooks.DataAccess.csproj" />
     <ProjectReference Include="..\PawansBooks.Models\PawandeepBooks.Models.csproj" />
     <ProjectReference Include="..\PawansBooks.Utility\PawandeepBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Customers\Controllers\" />
+    <Folder Include="Areas\Customers\Data\" />
+    <Folder Include="Areas\Customers\Models\" />
+    <Folder Include="Areas\Customers\Views\" />
   </ItemGroup>
 
 </Project>
